App: add exit button to bring the user to the admin dashboard when not logged in

--- a/assets/app/src/translations/en_US.json
+++ b/assets/app/src/translations/en_US.json
@@ -27,6 +27,7 @@
 		"Heading": "Administration",
 		"OpenAdminLabel": "Dashboard",
 		"OpenAdminAction": "Open Dashboard",
+		"GoToAdminLabel": "Go to Dashboard",
 		"RemoveUsersLabel": "Users",
 		"RemoveUsersAction": "Log out all users",
 		"RemoveUsersSuccess": "All users are logged-out from the application.",
