--- a/assets/app/src/translations/nl_NL.json
+++ b/assets/app/src/translations/nl_NL.json
@@ -26,7 +26,8 @@
 		"ClearCacheFailed": "Het is niet gelukt om de cache leeg te maken.",
 		"Heading": "Beheer",
 		"OpenAdminLabel": "Dashboard",
-		"OpenAdminAction": "Naar admin dashboard",
+		"OpenAdminAction": "Open admin dashboard",
+		"GoToAdminLabel": "Naar admin dashboard",
 		"RemoveUsersLabel": "Gebruikers",
 		"RemoveUsersAction": "Alle gebruikers uitloggen",
 		"RemoveUsersSuccess": "Alle gebruikers zijn nu van deze applicatie uitgelogd.",
