App/Occasions: separate loading state from modes and add/update action descriptions

--- a/assets/app/src/translations/en_US.json
+++ b/assets/app/src/translations/en_US.json
@@ -206,9 +206,11 @@
 		"OccasionTypeLabel": "Type",
 		"OccasionDateLabel": "Date",
 		"OccasionDatepickerLabel": "Select occasion date",
-		"ActiveOccasion": "Active occasion",
-		"SelectExisting": "Select existing",
-		"CreateNew": "Create new",
+		"ActiveOccasionLabel": "Current",
+		"SelectExistingLabel": "List",
+		"SelectExistingDescription": "Select to load an existing occasion.",
+		"CreateNewLabel": "New",
+		"CreateNewDescription": "Start a new occasion.",
 		"Create": "Create occasion",
 		"LoadingOccasion": "Loading occasion %s...",
 		"CreatingOccasion": "Creating new occasion %s...",
