--- a/assets/app/src/translations/nl_NL.json
+++ b/assets/app/src/translations/nl_NL.json
@@ -203,9 +203,11 @@
 		"OccasionTypeLabel": "Type",
 		"OccasionDateLabel": "Datum",
 		"OccasionDatepickerLabel": "Selecteer gelegenheidsdatum",
-		"ActiveOccasion": "Actieve gelegenheid",
-		"SelectExisting": "Bestaande selecteren",
-		"CreateNew": "Nieuwe aanmaken",
+		"ActiveOccasionLabel": "Actief",
+		"SelectExistingLabel": "Lijst",
+		"SelectExistingDescription": "Selecteer een gelegenheid om deze in te laden.",
+		"CreateNewLabel": "Nieuw",
+		"CreateNewDescription": "Start een nieuwe gelegenheid.",
 		"Create": "Nieuwe gelegenheid",
 		"LoadingOccasion": "De gelegenheid %s wordt ingeladen...",
 		"CreatingOccasion": "De nieuwe gelegenheid %s wordt aangemaakt...",
