--- a/assets/app/src/translations/nl_NL.json
+++ b/assets/app/src/translations/nl_NL.json
@@ -229,7 +229,17 @@
 		"OpenOccasionPanel": "Open het gelegenheidscherm",
 		"AreYouSureDelete": "Weet je zeker dat je de gelegenheid %s wilt verwijderen?",
 		"Error": {
-			"NoOccasion": "Er is geen gelegenheid geselecteerd."
+			"NoOccasion": "Er is geen gelegenheid geselecteerd.",
+			"TitleIsEmpty": "De titel mag niet leeg zijn.",
+			"InvalidOccasionDate": "De datum is niet juist opgesteld.",
+			"NoOccasionType": "De gelegenheid heeft geen type.",
+			"InvalidOccasionType": "Het geselecteerde type bestaat niet.",
+			"CloseNotAllowed": "Helaas, je hebt geen rechten om deze gelegenheid te sluiten..",
+			"IsLocked": "De gelegenheid is vergrendeld.",
+			"CannotClose": "De gelegenheid kan niet afgesloten worden.",
+			"ReopenNotAllowed": "Helaas, je hebt geen rechten om deze gelegenheid te heropenen.",
+			"IsNotClosed": "De gelegenheid is niet afgesloten",
+			"CannotReopen": "De gelegenheid kan niet heropend worden."
 		}
 	},
 	"Order": {
@@ -278,6 +288,7 @@
 			"TitleIsAlreadyInUse": "De naam is reeds in gebruik. Gebruik een andere naam.",
 			"TitleIsEmpty": "De naam mag niet leeg zijn.",
 			"PriceShouldBeGreaterThanZero": "De prijs moet groter zijn dan nul.",
+			"InvalidPriceField": "Kan de prijs van het product niet bijwerken.",
 			"NoProductCategory": "Het product heeft geen categorie.",
 			"InvalidProductCategory": "De geselecteerde categorie bestaat niet."
 		}
