App/Receipt: show a label when the receipt is empty (no-items)

--- a/assets/app/src/translations/en_US.json
+++ b/assets/app/src/translations/en_US.json
@@ -304,7 +304,8 @@
 	"Receipt": {
 		"ListHeading": "Receipt",
 		"SelectAConsumer": "Select a consumer",
-		"FeedbackTitle": "Receipt errors"
+		"FeedbackTitle": "Receipt errors",
+		"NoItems": "The receipt is empty."
 	},
 	"Settings": {
 		"OpenSettings": "Open settings"
