--- a/assets/app/src/translations/en_US.json
+++ b/assets/app/src/translations/en_US.json
@@ -123,7 +123,7 @@
 		"DecimalSeparator": ".",
 		"ThousandSeparator": ",",
 		"NumFormat": "#,###.##;-#,###.##",
-		"MoneyFormat": "$ #,###.##;-$ #,###.##",
+		"MoneyFormat": "%1$s #,###.##;-%1$s #,###.##",
 		"SelectDate": "Select date",
 		"PreviousMonth": "Previous month",
 		"NextMonth": "Next month",
