--- a/assets/app/src/translations/nl_NL.json
+++ b/assets/app/src/translations/nl_NL.json
@@ -123,7 +123,7 @@
 		"DecimalSeparator": ",",
 		"ThousandSeparator": ".",
 		"NumFormat": "#.###,##;-#.###,##",
-		"MoneyFormat": "€ #.###,##;-€ #.###,##",
+		"MoneyFormat": "%1$s #.###,##;-%1$s #.###,##",
 		"SelectDate": "Selecteer datum",
 		"PreviousMonth": "Vorige maand",
 		"NextMonth": "Volgende maand",
