App: add support for item icons in the input dropdown component

--- a/assets/app/src/translations/en_US.json
+++ b/assets/app/src/translations/en_US.json
@@ -129,6 +129,7 @@
 		"NextMonth": "Next month",
 		"Today": "Today",
 		"SelectedDate": "Selected date",
+		"SelectValue": "Select",
 		"NoSearchResultsFor": "No search results for '%s'",
 		"Offline": {
 			"StatusTitle": "Device not connected",
