App/Product: apply hidden product category functionality. Identifies single products and product categories as hidden. Products in hidden categories are not available for selection in orders.

--- a/assets/app/src/translations/en_US.json
+++ b/assets/app/src/translations/en_US.json
@@ -277,6 +277,8 @@
 		"Select": "Select %s",
 		"SelectMore": "More %s",
 		"SelectLess": "Less %s",
+		"HiddenProduct": "This product is hidden",
+		"HiddenProductCategory": "This is a hidden product category",
 		"AllCategoriesOption": "All categories",
 		"OrderBy": "Order by",
 		"OrderByTitle": "Title",
