App: specify feedback message when editing an order is not allowed because the occasion is closed

--- a/assets/app/src/translations/en_US.json
+++ b/assets/app/src/translations/en_US.json
@@ -258,6 +258,7 @@
 		"ConsumerConsumedAtDate": "%s consumed %s at %s",
 		"Error": {
 			"OccasionClosed": "The occasion is closed for new orders.",
+			"OccasionClosedEditing": "The occasion is closed for editing orders.",
 			"TimeLocked": "The order cannot be edited anymore."
 		}
 	},
