App: synchronize the naming of consumer types with the rest of the plugin

--- a/assets/app/src/translations/en_US.json
+++ b/assets/app/src/translations/en_US.json
@@ -97,7 +97,7 @@
 		"FeedbackTitle": "Consumer errors",
 		"OrderBy": "Order by",
 		"OrderByName": "Name",
-		"TypesGroupName": "Types",
+		"TypesGroupName": "Consumer Types",
 		"ExpandGroups": "Expand all groups",
 		"CollapseGroups": "Collapse all groups",
 		"ExpandGroup": "Expand group",
