--- a/assets/app/src/translations/nl_NL.json
+++ b/assets/app/src/translations/nl_NL.json
@@ -97,7 +97,7 @@
 		"FeedbackTitle": "Fouten in afnemer",
 		"OrderBy": "Sorteer op",
 		"OrderByName": "Naam",
-		"TypesGroupName": "Types",
+		"TypesGroupName": "Afnemertypen",
 		"ExpandGroups": "Alle groepen uitklappen",
 		"CollapseGroups": "Alle groepen inklappen",
 		"ExpandGroup": "Groep uitklappen",
