App/Receipt: improve section switching on small screens
Only expand/collapse the receipt with onclick for the item list header image and the total value button.
Switch to the consumers section when clicking on 'Select a consumer'.
Switch to the products section when clicking on 'Select products'.

Styles are adjusted to increase the target surface of the section switchers.

--- a/assets/app/src/translations/en_US.json
+++ b/assets/app/src/translations/en_US.json
@@ -309,7 +309,8 @@
 		"ListHeading": "Receipt",
 		"SelectAConsumer": "Select a consumer",
 		"FeedbackTitle": "Receipt errors",
-		"NoItems": "The receipt is empty."
+		"NoItems": "The receipt is empty.",
+		"SelectProducts": "Select products"
 	},
 	"Settings": {
 		"OpenSettings": "Open settings"
