App/Occasion: implement the Occasion's default Product Category

--- a/assets/app/src/translations/en_US.json
+++ b/assets/app/src/translations/en_US.json
@@ -221,6 +221,7 @@
 		"OccasionTypeLabel": "Type",
 		"OccasionDateLabel": "Date",
 		"OccasionDatepickerLabel": "Select occasion date",
+		"DefaultProductCategoryLabel": "Default product category",
 		"ActiveOccasionLabel": "Current",
 		"SelectExistingLabel": "List",
 		"SelectExistingDescription": "Select to load an existing occasion.",
