App: update translations for refresh actions and error messaging

--- a/assets/app/src/translations/en_US.json
+++ b/assets/app/src/translations/en_US.json
@@ -76,6 +76,7 @@
 		"On": "On",
 		"Open": "Open",
 		"Previous": "Previous",
+		"Refresh": "Refresh",
 		"Remove": "Remove",
 		"Reset": "Reset",
 		"Save": "Save",
